--- a/lec3/index.html
+++ b/lec3/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS course</title>
   <script src="./task_1/index.js"></script>
+  <!-- <script src="./example/index.js"></script> -->
 </head>
 <body>
 
