--- a/lec7/example_1/example_1.html
+++ b/lec7/example_1/example_1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS course</title>
-  <script src="example_1/index.js"></script>
+
 </head>
 <body>
   <div class='container'>
@@ -13,5 +13,6 @@
     <button class='clickMe button red square'> Click me </button>
 
    </div>
+   <script src="../example_1/example_1.js"></script>
 </body>
 </html>
