--- a/lec7/example_2/example_2.html
+++ b/lec7/example_2/example_2.html
@@ -20,6 +20,6 @@
       <div class="field color-selected"></div>
     </div>
    </div>
-   <script src="example_2/index.js"></script>
+   <script src="../example_2/example_2.js"></script>
 </body>
 </html>
