--- a/lec7/index.html
+++ b/lec7/index.html
@@ -10,34 +10,39 @@
   <title>Modal</title>
 </head>
 <body>
-<div class="modal">
-  <!-- В стилях display.none, удалите, чтобы увидеть -->
-  <div class="popap">
-    <div class="popap-head">
-      <div class="close">X</div>
-    </div>
-    <div class="popap-main">
-      <form class="popap-form">
-        <label>
-            <span>First Name</span>
-            <input type="text" name="first-name">
-        </label>
-        <label>
-            <span>Last Name</span>
-            <input type="text" name="last-name">
-        </label>
-        <label>
-            <span>Age</span>
-            <input type="text" name="age">
-        </label>
-      </form>
-      <div class="popap-btn">
-          <div class="btn close">close</div>
-          <div class="btn ok">ok</div>
+  <div class="modal">
+    <!-- В стилях display.none, удалите, чтобы увидеть -->
+    <div class="popup">
+      <div class="popup-head">
+        <div class="close">X</div>
+      </div>
+      <div class="popup-main">
+
+        <form class="popup-form">
+          <label>
+              <span>First Name</span>
+              <input type="text" name="first-name">
+          </label>
+          <label>
+              <span>Last Name</span>
+              <input type="text" name="last-name">
+          </label>
+          <label>
+              <span>Age</span>
+              <input type="text" name="age">
+          </label>
+        </form>
+
+        <div class="popup-btn">
+            <div class="btn close">close</div>
+            <div class="btn ok">ok</div>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<div class="btn add-user">add user</div>
+
+  <!-- Кнопка -->
+  <div class="btn add-user">add user</div>
+<script src="./task_1/index.js"></script>
 </body>
 </html>
